# MLSManager

./: .env.dev  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend-quality.yml  frontend-quality.yml
backend/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml  ruff.toml
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  code_server.py  datasets.py  files.py  internal.py  jobs.py  nodes.py  projects.py  settings.py  users.py
backend/app/core/: config.py  database.py  security.py  seed.py
backend/app/models/: __init__.py  dataset.py  job.py  node.py  project.py  settings.py  user.py
backend/app/schemas/: __init__.py  dataset.py  files.py  job.py  node.py  project.py  settings.py  user.py
backend/app/services/: file_service.py  job_service.py  node_service.py  worker_client.py
backend/app/tasks/: __init__.py  scheduler.py
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css  (+1 more)
infra/: README.md
openspec/: AGENTS.md  project.md
projects/: .gitkeep
worker/: .air.toml  .gitignore  Dockerfile.dev  go.mod
worker_agent/: Dockerfile  __init__.py  agent.py  go.mod  go.sum  pyproject.toml  ruff.toml
worker_agent/cmd/agent/: main.go
worker_agent/internal/client/: client.go
worker_agent/internal/config/: config.go
worker_agent/internal/executor/: executor.go
worker_agent/internal/scanner/: scanner.go
worker_agent/internal/sysinfo/: sysinfo.go
(+87 files in other folders)
