[project]
name = "mlsmanager-backend"
version = "0.1.0"
description = "ML-Server-Manager Backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.6",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.19.0",
  "pydantic[email]>=2.5.3",
  "pydantic-settings>=2.1.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.1.0",
  "httpx>=0.26.0",
  "celery[librabbitmq]>=5.3.6",
  "python-dotenv>=1.0.0",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.4", "pytest-asyncio>=0.23.3", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff]
extend = "ruff.toml"
