[project]
name = "mlsmanager-worker-agent"
version = "0.1.0"
description = "ML-Server-Manager Worker Agent"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.26.0",
  "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.4", "ruff>=0.8.0"]

[project.scripts]
mlsmanager-agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["agent.py", "__init__.py"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
extend = "ruff.toml"
